--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
 v0.1.0, July 27th 2014 -- Initial release.
 v0.1.1, September 2nd 2014 -- Many necessary updates.
 v0.1.2, September 19th 2014 -- Ready for first release.
+v0.1.3, September 19th 2014 -- Bump version.
