--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,3 +3,4 @@ v0.1.1, September 2nd 2014 -- Many necessary updates.
 v0.1.2, September 19th 2014 -- Ready for first release.
 v0.1.3, September 19th 2014 -- Bump version.
 v0.1.4, September 22th 2014 -- Recommended settings.
+v0.1.5, September 22th 2014 -- By default don't use a lock.
