--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,4 +8,4 @@ v0.1.6, October 2nd 2014 -- Set CPU count for Virtual Machines.
 v0.1.7, October 3rd 2014 -- Introduce vboxkill and removevms utilities.
 v0.1.8, October 7th 2014 -- Ability to use a 3rd party repository.
 v0.1.9, October 8th 2014 -- Mac OS X, VRDE, enforce integer types.
-v0.1.9a, October 9th 2014 -- Correctly install data files.
+v0.1.10, October 9th 2014 -- Correctly install data files.
