--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,12 @@
+0.1.15, November 29th 2014
+
+    New: Introduce Virtual Machine Cloning for quick and efficient creation
+        of new Virtual Machines. Use vmcloak in --bird mode and vmcloak-clone
+        to create a clone off of it.
+    Feature: Introduce write-batch functionality in vmcloak-deps.
+    Feature: Removed lockfile dependency.
+    Bugfix: Correctly remove C:\\vmcloak after setup.
+
 0.1.14, November 10th 2014
 
     Tweak: Maintenance of various executable scripts.
