--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.1.16, December 5th 2014
+
+    Feature: Ability to drop privileges to another user.
+
 0.1.15, November 29th 2014
 
     New: Introduce Virtual Machine Cloning for quick and efficient creation
