--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.1.20, December 11th 2014
+
+    Bugfix: --deps-directory still used the old $HOME value.
+
 0.1.19, December 11th 2014
 
     Bugfix; Resolve parameters that use $PATH again after updating $PATH when
