--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,13 @@
+0.2, March 18th 2015
+
+    Official release with Windows 7 support.
+
+    Tweak: Really disable the Set Network Location window.
+    Tweak: Disable the Windows 7 Firewall and Defender.
+    Tweak: Pass through the Virtual Machine Type (Windows XP vs Windows 7)
+        when creating a bird image.
+    Tweak: Ensure Windows XP and Windows 7 data files are packaged.
+
 0.1.23, March 17th 2015
 
     Tweak: Refactoring of the internals for improved Windows 7 support.
