--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.2.1, TBD
+
+    Tweak: Allow the IP range and CIDR to be specified in vmcloak-iptables.
+
 0.2, March 18th 2015
 
     Official release with Windows 7 support.
