--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.2.2, TBD
+
+    Tweak: Include PIL (required for screenshots) in recommended mode.
+
 0.2.1, May 10th 2015
 
     Tweak: Allow the IP range and CIDR to be specified in vmcloak-iptables.
