--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+0.2.4, May 30th 2015
+
+    Tweak: Get rid of vmcloak-deps' urls.txt in favor of our self-hosted
+        binaries at http://cuckoo.sh/vmcloak-files/.
+    Tweak: Remove birds.json file when running vmcloak-removevms.
+
 0.2.3, May 26th 2015
 
     Release as I forgot to properly update setup.py with the latest
