debug mode running python.exe instead of pythonw.exe
So it runs the visible Python process and it propagates this (python.exe
vs pythonw.exe) further to the child process(es).

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@
     New: Disable Windows updates.
     New: Allow manual modification of Virtual Machines by removing the
         Cuckoo Agent (and its associated registry key) at a later time.
+    Tweak: Debug mode in which python.exe is uses instead of pythonw.exe.
 
 0.2.5, May 31th 2015
 
