--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,4 @@
-0.2.6, TBD
+0.2.6, June 25th 2015
 
     New: Disable Windows updates.
     New: Allow manual modification of Virtual Machines by removing the
