--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+0.2.11, September 7th 2015
+
+    Tweak: The --clonehd feature is now obsolete. It turns out multiattach
+        mode is capable of doing what we are interested in after all.
+
 0.2.10, September 6th 2015
 
     Feature: Update hostname for each clone to avoid duplicate hostname errors.
