--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+0.3.3, TBD
+
+    Bugfix: The vmcloak-register utility was not functional yet, fixed now.
+    Tweak: Update the readme to include a link to the howto 0.3 blogpost.
+
 0.3.2, October 9th 2015
 
     Tweak: Try to avoid running VMCloak 0.2 command line arguments on a 0.3
