--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+0.3.8, January 19th 2016
+
+    Tweak: Fixed issue with non-homebasic Windows 7 product versions.
+    Tweak: Allow users to specify which Windows 7 product version they want.
+
 0.3.7, January 6th 2016
 
     Tweak: Creating a bird through vmcloak-init fails when it already exists.
