--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,7 +1,11 @@
+0.3.10, February 26th 2016
+
+    Tweak: Fixed logging in vmcloak-register (thanks justaguy).
+
 0.3.9, February 26th 2016
 
     Tweak: Fixed Chrome sha1 value (thanks baufrecht).
-    Tweak: Fixed logging in vmcloak-register (thanks Geoffrey van den Berge).
+    Tweak: Fixed logging in vmcloak-snapshot (thanks Geoffrey van den Berge).
     Tweak: Removed VMCloak 0.2.13 warning.
 
 0.3.8, January 19th 2016
