--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@
     New: Improved command-line interface through the click library.
     New: Export .ova/.ovf functionality.
     New: Basic unittests for each supported Operating System.
+    New: Tweak the snapshot command to create multiple snapshots at once.
     Tweak: Upgrade to Cuckoo Agent 0.3 featuring two bugfixes.
     Tweak: Prune superfluous warning thrown by genisoimage.
 
