--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -6,8 +6,11 @@
     New: Export .ova/.ovf functionality.
     New: Basic unittests for each supported Operating System.
     New: Tweak the snapshot command to create multiple snapshots at once.
-    Tweak: Upgrade to Cuckoo Agent 0.3 featuring two bugfixes.
+    Tweak: Upgrade to Cuckoo Agent 0.5 featuring IP pinning and 3 bugfixes.
     Tweak: Prune superfluous warning thrown by genisoimage.
+    Tweak: Lots of Java7 and Java8 versions (thanks razu).
+    Tweak: Lots of new Adobe PDF Reader versions.
+    Bugfix: Improved VirtualBox 5.0 and 5.1 support.
 
 0.3.13, June 28th 2016
 
