--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.4.1, TBD
+
+    Tweak: Cuckoo Package support for vmcloak-register.
+
 0.4, August 15th 2016
 
     New: Windows 8.1 and Windows 10 support (thanks razu).
