--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
-0.4.1, TBD
+0.4.1, August 27th 2016
 
     Tweak: Cuckoo Package support for vmcloak-register.
+    Tweak: Modified all cuckoo.sh URLs to use https.
 
 0.4, August 15th 2016
 
