--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,8 @@
 0.4.3, TBD
 
+    New: Swarm configuration for deploying dozens of VMs at once (WIP).
     New: Java JDK 8u121.
+    Tweak: Removal of obsolete documentation.
 
 0.4.2, October 15th 2016
 
