allow newer versions of requests for cuckoo compatibility
Up until 2.0.1, Cuckoo required 2.7.0, while since that release
2.13.0 is required. Have VMCloak support both versions.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+0.4.4, TBD
+
+    Tweak: Support multiple versions of the requests dependency.
+
 0.4.3, April 28th, 2017
 
     New: Swarm configuration for deploying dozens of VMs at once (WIP).
