--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,9 @@
-0.4.4, TBD
+0.4.5, TBD
+
+    New: Disable PatchGuard and Driver Signature Enforcement through the
+        zer0m0n VMCloak dependency.
+
+0.4.4, August 22nd, 2017
 
     Tweak: Support multiple versions of the requests dependency.
     Tweak: Ignore proxies defined in environment variables (thanks Kolano).
