--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+0.4.7, TBD
+
+    Tweak: Set a default version for Firefox (thanks samwakel).
+    Tweak: Include a more recent Firefox (60.0.2).
+    Tweak: Fix issue with 4GB+ 64-bit Windows 10 images.
+
 0.4.6, October 9th, 2018
 
     New: Install the old Cuckoo Agent compatible with cuckoo-modified next to
